k8s/workstation-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: workstation
  namespace: range-session-TEMPLATE
  labels:
    app.kubernetes.io/name: cyberrange-workstation
    session-id: "TEMPLATE_SESSION_ID"
spec:
  # Optional: runtimeClassName: gvisor # For kernel-level sandboxing
  containers:
    - name: workstation-desktop
      image: cyberrange/workstation-kali:latest
      resources:
        limits:
          cpu: "2"
          memory: "4Gi"
        requests:
          cpu: "500m"
          memory: "1Gi"
      ports:
        - name: kasmvnc
          containerPort: 6901
        - name: terminal-pty
          containerPort: 8081
        - name: code-server
          containerPort: 8443
      volumeMounts:
        - name: workspace-volume
          mountPath: /home/learner/lab

  volumes:
    - name: workspace-volume
      emptyDir: {}
