k8s/target-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: target-host
  namespace: range-session-TEMPLATE
  labels:
    app.kubernetes.io/name: cyberrange-target
    session-id: "TEMPLATE_SESSION_ID"
spec:
  containers:
    - name: vulnerable-target
      image: cyberrange/target-recon:latest
      resources:
        limits:
          cpu: "1"
          memory: "1Gi"
        requests:
          cpu: "250m"
          memory: "256Mi"
      ports:
        - name: ssh
          containerPort: 22
        - name: http
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: target
  namespace: range-session-TEMPLATE
spec:
  selector:
    app.kubernetes.io/name: cyberrange-target
  ports:
    - name: ssh
      port: 22
      targetPort: 22
    - name: http
      port: 8080
      targetPort: 8080
